# vromvrom-engine

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.webhook  README.fr.md  README.md  STRATEGIES.fr.md  STRATEGIES.md  claude_desktop_config.json.example  config.example.json  docker-compose.yml  docker-entrypoint.sh  gui_server.py  ha_commands.json.example  main.py  mcp_server.py  populate_embeddings.py  prepare_oss_export.ps1  pricing_strategy.json.example  pyproject.toml  requirements-dev.txt  requirements.txt  seed_github_models.py  seed_models_db.py  start_moteur.sh  sync_db_to_markdown.py  workspace_mcp.py
agents/: antigravity_agent.py  base_agent.py  dreamer_agent.py  executor.py  ha_agent.py  planner.py  prompt_engineer_agent.py  reviewer.py  reviewer_transition.py  tool_maker_agent.py
api/: __init__.py
core/: __init__.py  anthropic_native_provider.py  antigravity_helper.py  app_state.py  async_db_serializer.py  auditor_agent.py  auth.py  backlog_db.py  billing_sync.py  budget_guard.py  checkpoint.py  cli_token_collector.py  custom_agents.py  daemon_loop.py  dag_runner.py  elo_core.py  elo_router.py  elo_scorer.py  engine.py  error_reporter.py  errors.py  event_store.py  execution_budget.py  factory.py  gcp_oauth_client.py  gemini_native.py  ha_anomaly_detector.py  ha_fuzzy_matcher.py  ha_tls.py  healing.py  hitl.py  intent_splitter.py  key_pool.py  langfuse_bridge.py  llm_gateway.py  llm_timeouts.py  mcp_app.py  mcp_bridge.py  ml_router.py  models_db.py  (+39 more)
deploy/: deploy_worker.ps1  docker-compose-langfuse.yml  install_worker.sh  lancer_moteur.bat  moteur-worker.service  worker_standalone.py
docs/: API_REFERENCE.fr.md  API_REFERENCE.md  ARCHITECTURE.md
memory/: aqa.py  chroma_memory.py  context_loader.py  context_manager.py  embeddings.py  episodes.py  facts.py  gemini_embedding_fn.py  graph.py  memory_db.py  rag.py  skills.py
(+229 files in other folders)
